[project]
name = "uv-env-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "flash-attn",
    "ipykernel>=7.1.0",
    "numpy==1.26.4",
    "torch==2.6.0",
    "torch-cluster>=1.6.3",
    "torch-geometric==2.6.1",
    "trimesh>=4.9.0",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.6cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu121/torch_cluster-1.6.3%2Bpt26cu121-cp310-cp310-linux_x86_64.whl" }
